--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -59,8 +59,9 @@ padding-left: 5px;
 }
 
 
-a:link {
-  text-decoration: none;
+a {
+ 
+ color: rgb(0, 0, 0);
 }
 
 a:visited {
@@ -69,4 +70,5 @@ a:visited {
 
 a:hover {
   text-decoration: none;
+  
 }
