--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -94,11 +94,10 @@ font-size: 42px;
 }
 
 .nav-link {
-  font-family: 'M PLUS 1', sans-serif;
-text-transform: small-caps;
-font-size: 20px;
-color: rgb(145, 141, 141);
-font-weight: lighter;
+ font-family: 'Montserrat', sans-serif;
+  margin-top: 4px;
+  text-transform: small-caps;
+  font-weight: 400;
 }
 
 
