--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,17 +1,32 @@
+:root {
+--primary-colour-black: black;
+--secondary-color-white: white;
+--accent-color: rgb(145, 41, 76);
+--text-paragraph-color:rgb(65, 65, 65);
+--heading-color-light:rgb(145, 141, 141);
+--heading-color-darker: rgb(65, 65, 65);
+--hyperlink-color:  color: rgba(0, 0, 0, 0.699);
+--hyperlink-hover-color: grey;
+--font-main: 'M PLUS 1', sans-serif;; 
+--font-headings: 'Montserrat', sans-serif;; 
+}
+ 
+
+
 .Portfolio h1 {
 font-size: 136px;
-font-family: 'M PLUS 1', sans-serif;
+font-family: var(--font-main);
+color: var(--primary-colour-black);
 text-transform: capitalize;
 font-weight: bold;
 line-height: 55pt;
 letter-spacing: 5px;
 text-transform: uppercase;
-
 }
 
 .Portfolio h2 {
 font-size: 84px;
-font-family: 'M PLUS 1', sans-serif;
+font-family: var(--font-main);
 text-transform: capitalize;
 font-weight: bold;
 letter-spacing: 8px;
@@ -23,47 +38,55 @@ padding-left: 5px;
 .Portfolio h3 {
   text-transform: uppercase;
   font-size: 18px;
-color: black;
-  font-family: 'M PLUS 1', sans-serif;
+color: var(--primary-colour-black);
+  font-family: var(--font-main);
 }
 
-p {
-    color: rgb(65, 65, 65);
-  font-family: 'Montserrat', sans-serif;
+.Portfolio p {
+    color: var(--text-paragraph-color);
+  font-family: var(--font-headings);
   font-weight: lighter;
   font-size: 18px;
 
 }
 
+
 .Portfolio h4 {
-   font-family: 'M PLUS 1', sans-serif;
+   font-family: var(--font-main);
 text-transform: small-caps;
 font-size: 20px;
-color: rgb(145, 141, 141);
+color: var(--heading-color-light);
 font-weight: lighter;
 }
 
 .Portfolio h5 {
-   font-family: 'M PLUS 1', sans-serif;
+   font-family: var(--font-main);
 text-transform: uppercase;
 font-size: 36px;
-color: rgb(0, 0, 0);
+color: var(--primary-colour-black);
 font-weight: lighter;
 letter-spacing: 3px;
 }
 
 .Portfolio small {
 font-size: 24px;
-font-family: 'M PLUS 1', sans-serif;
+font-family: var(--font-main);
 color: rgb(189, 184, 184);
 font-style: italic;
 padding-left: 5px;
 font-weight: lighter;
 }
 
+.contactLink {
+    color: var(--text-paragraph-color);
+  font-family: var(--font-headings);
+  font-weight: 500px;
+  font-size: 14px;
+}
+
 a {
  text-decoration: none;
- color: rgba(0, 0, 0, 0.699);
+ color: var(--hyperlink-color);
  font-weight: 700;
 }
 a:visited {
@@ -72,7 +95,7 @@ a:visited {
 
 a:hover {
   text-decoration: none;
-  color:grey;
+  color:var(--hyperlink-hover-color);
   font-weight: lighter;
   
 }
@@ -89,12 +112,12 @@ a:hover {
 
 .projectYear {
 text-align: right;
-color: black;
+color: var(--primary-colour-black);
 font-size: 42px;
 }
 
 .nav-link {
- font-family: 'Montserrat', sans-serif;
+ font-family: var(--font-headings);
   margin-top: 4px;
   text-transform: small-caps;
   font-weight: 400;
@@ -102,9 +125,36 @@ font-size: 42px;
 
 
 .navbar-brand {
-  font-family: 'Montserrat', sans-serif;
+  font-family: var(--font-headings);
   margin-top: 4px;
   text-transform: uppercase;
 
 }
+
+.nav-item {
+  padding: 0 30px;
+
+}
+
+@media (max-width: 900px) {
+  .Portfolio h1 {
+ font-size: 72px;
+line-height: 45pt;
+letter-spacing: 2px;
+text-transform: uppercase;
+  }
+
+.Portfolio h2 {
+ font-size: 54px;
+ text-transform: capitalize;
+font-weight: bold;
+letter-spacing: 2px;
+text-transform: uppercase;
+line-height: 26pt;
+padding-left: 5px;
+  }
+
+
+}
+
 
