--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -42,14 +42,14 @@ color: var(--primary-colour-black);
   font-family: var(--font-main);
 }
 
-.Portfolio p {
+
+p {
     color: var(--text-paragraph-color);
   font-family: var(--font-headings);
   font-weight: lighter;
   font-size: 18px;
 
 }
-
 
 .Portfolio h4 {
    font-family: var(--font-main);
@@ -102,7 +102,7 @@ a:hover {
 
 
 .mt-6 {
-    margin-top: 25rem;
+    margin-top: 20rem;
 }
 
 .mt-7 {
