--- a/src/DarkMode.css
+++ b/src/DarkMode.css
@@ -1,7 +1,6 @@
 #darkMode {
-   background: transparent
-   url("moon.png") no-repeat center;
-    background-size: 30px 30px;
+  background: transparent url("./moon.png") no-repeat center;
+  background-size: 30px 30px;
   width: 45px;
   height: 45px;
   filter: grayscale(100%);
@@ -13,12 +12,14 @@
 #darkMode:hover,
 #darkMode:focus {
   filter: none;
-  background-color: white;
-  cursor: pointer;
-  color: (--secondary-color-white);
+  background-color: black;
+  color: white;
+
 }
 
 #darkMode.clicked {
   filter: none !important;
-  background-color:(--primary-colour-black);
+  background-color: black;
+    color: white;
 }
+
