--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -174,23 +174,23 @@ padding: 30px 10px 30px 30px;
 
 @media (max-width: 900px) {
   .Portfolio h1 {
- font-size: 64px;
+ font-size: 54px;
 line-height: 45pt;
 letter-spacing: 1px;
 text-transform: uppercase;
+
   }
 
 .Portfolio h2 {
- font-size: 54px;
+ font-size: 42px;
  text-transform: capitalize;
 font-weight: bold;
 letter-spacing: 2px;
 text-transform: uppercase;
 line-height: 26pt;
 padding-left: 5px;
-  }
-
-  
+font-weight: lighter;
+}
 }
 
 
