--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,93 +1,124 @@
 :root {
---primary-colour-black: black;
---secondary-color-white: white;
---accent-color: rgb(145, 41, 76);
---text-paragraph-color:rgb(65, 65, 65);
---heading-color-light:rgb(145, 141, 141);
---heading-color-darker: rgb(65, 65, 65);
---hyperlink-color: rgba(0, 0, 0, 0.699);
---hyperlink-hover-color: grey;
---font-main: 'M PLUS 1', sans-serif;; 
---font-headings: 'Montserrat', sans-serif;
---cursor-color:  black;
-}
- 
-a:link, a:visited, a:hover, a:active{
-    text-decoration: none;
+  --primary-colour-black: black;
+  --secondary-color-white: white;
+  --accent-color: rgb(145, 41, 76);
+  --text-paragraph-color: rgb(65, 65, 65);
+  --heading-color-light: rgb(145, 141, 141);
+  --heading-color-darker: rgb(65, 65, 65);
+  --hyperlink-color: rgba(0, 0, 0, 0.699);
+  --hyperlink-hover-color: grey;
+  --font-main: "M PLUS 1", sans-serif;
+  --font-headings: "Montserrat", sans-serif;
+  --cursor-color: black;
 }
 
-.Portfolio h1{
-font-size: 136px;
-font-family: var(--font-main);
-color: var(--primary-colour-black);
-text-transform: capitalize;
-font-weight: bold;
-line-height: 55pt;
-letter-spacing: 5px;
-text-transform: uppercase;
+[data-theme="dark"] {
+  --primary-colour-black: white;
+  --secondary-color-white: black;
+  --accent-color: rgb(145, 41, 76);
+  --text-paragraph-color: white;
+  --heading-color-light: rgb(223, 219, 219);
+  --heading-color-darker: rgb(219, 216, 216);
+  --hyperlink-color: white;
+  --hyperlink-hover-color: rgb(145, 141, 141);
+  --cursor-color: white;
+  --font-main: "M PLUS 1", sans-serif;
+  --font-headings: "Montserrat", sans-serif;
+    --cursor-color: white;
 }
 
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+}
+
+.Portfolio {
+  background-color: var(--secondary-color-white);
+  transition: all 0.5s;
+  padding-left: 60px;
+}
+
+.Portfolio h1 {
+  font-size: 136px;
+  font-family: var(--font-main);
+  color: var(--primary-colour-black);
+  text-transform: capitalize;
+  font-weight: bold;
+  line-height: 55pt;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
 
 .Portfolio h2 {
-font-size: 84px;
-font-family: var(--font-main);
-color: var(--primary-colour-black);
-text-transform: capitalize;
-font-weight: bold;
-letter-spacing: 8px;
-text-transform: uppercase;
-line-height: 55pt;
-padding-left: 5px;
+  font-size: 84px;
+  font-family: var(--font-main);
+  color: var(--primary-colour-black);
+  text-transform: capitalize;
+  font-weight: bold;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+  line-height: 55pt;
+  padding-left: 5px;
 }
 
 .Portfolio h3 {
   text-transform: uppercase;
   font-size: 18px;
-color: var(--primary-colour-black);
+  color: var(--primary-colour-black);
   font-family: var(--font-main);
 }
 
-
 p {
-    color: var(--text-paragraph-color);
+  color: var(--text-paragraph-color);
   font-family: var(--font-headings);
   font-weight: lighter;
   font-size: 18px;
-
 }
 
 .Portfolio h4 {
-   font-family: var(--font-main);
-text-transform: small-caps;
-font-size: 20px;
-color: var(--heading-color-light);
-font-weight: lighter;
+  font-family: var(--font-main);
+  text-transform: small-caps;
+  font-size: 20px;
+  color: var(--heading-color-light);
+  font-weight: lighter;
 }
 
 .Portfolio h5 {
-   font-family: var(--font-headings);
-text-transform: uppercase;
-font-size: 36px;
-color: var(--primary-colour-black);
-font-weight: lighter;
-letter-spacing: 3px;
-text-decoration: none;
+  font-family: var(--font-headings);
+  text-transform: uppercase;
+  font-size: 36px;
+  color: var(--primary-colour-black);
+  font-weight: lighter;
+  letter-spacing: 3px;
+  text-decoration: none;
 }
 
 .Portfolio small {
-font-size: 24px;
-font-family: var(--font-main);
-color: rgb(189, 184, 184);
-font-style: italic;
-padding-left: 5px;
-font-weight: lighter;
+  font-size: 24px;
+  font-family: var(--font-main);
+  color: rgb(189, 184, 184);
+  font-style: italic;
+  padding-left: 5px;
+  font-weight: lighter;
 }
 
+.NavBarStyling {
+  font-family: var(--font-headings); 
+}
+
+.NavBarStyling a {
+  color: var(--primary-colour-black);
+}
+.NavBarStyling a:hover {
+  color: rgb(145, 141, 141);
+}
 
 a {
- text-decoration: none;
- font-weight: 700;
- color: rgba(0, 0, 0, 0.699);
+  text-decoration: none;
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.699);
 }
 
 a:visited {
@@ -96,7 +127,7 @@ a:visited {
 
 a:hover {
   text-decoration: none;
-  color:var(--hyperlink-hover-color);
+  color: var(--hyperlink-hover-color);
   font-weight: lighter;
 }
 
@@ -104,12 +135,22 @@ a:active {
   text-decoration: none;
 }
 
+
+.themeToggle i {
+  font-size: 30px;
+  padding-top: 15px;
+  padding-right: 30px;
+  float: right;
+  color: var(--primary-colour-black);
+}
+
+
 .mt-6 {
-    margin-top: 20rem;
+  margin-top: 20rem;
 }
 
 .mt-7 {
-    margin-top: 10rem;
+  margin-top: 10rem;
 }
 
 .ProjectName {
@@ -117,80 +158,53 @@ a:active {
 }
 
 .projectYear {
-text-align: right;
-color: var(--primary-colour-black);
-font-size: 42px;
-}
-
-.nav-link {
-  margin-top: 4px;
-  text-transform: small-caps;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  margin-left: 50px;
-}
-
-
-.navbar-brand {
-  font-family: var(--font-headings);
-  margin-top: 4px;
-  text-transform: uppercase;
-}
-
-.nav-item {
-  padding: 0 30px;
-
+  text-align: right;
+  color: var(--primary-colour-black);
+  font-size: 42px;
 }
 
 .contactLink {
   text-decoration: none;
-    color: var(--text-paragraph-color);
-    
+  color: var(--text-paragraph-color);
+
   font-family: var(--font-headings);
   font-weight: 500px;
   font-size: 14px;
 }
 
 .textLink {
-   text-decoration: none;
- font-weight: 500;
- color: rgba(0, 0, 0, 0.699);
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--primary-colour-black);
 }
 
 .textLink:hover {
-   text-decoration: none;
-  color:var(--hyperlink-hover-color);
+  text-decoration: none;
+  color: var(--hyperlink-hover-color);
   font-weight: lighter;
 }
 
 .contactLink:hover {
   text-decoration: none;
-  color:var(--hyperlink-hover-color);
-}
-
-.DarkModeIcon {
-padding: 30px 10px 30px 30px;
+  color: var(--hyperlink-hover-color);
 }
 
 @media (max-width: 900px) {
   .Portfolio h1 {
- font-size: 54px;
-line-height: 45pt;
-letter-spacing: 1px;
-text-transform: uppercase;
-
+    font-size: 54px;
+    line-height: 45pt;
+    letter-spacing: 1px;
+    text-transform: uppercase;
   }
 
-.Portfolio h2 {
- font-size: 42px;
- text-transform: capitalize;
-font-weight: bold;
-letter-spacing: 2px;
-text-transform: uppercase;
-line-height: 26pt;
-padding-left: 5px;
-font-weight: lighter;
+  .Portfolio h2 {
+    font-size: 42px;
+    text-transform: capitalize;
+    font-weight: bold;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    line-height: 26pt;
+    padding-left: 5px;
+    font-weight: lighter;
+  }
 }
-}
-
-
