--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -9,7 +9,7 @@
   --hyperlink-hover-color: grey;
   --font-main: "M PLUS 1", sans-serif;
   --font-headings: "Montserrat", sans-serif;
-  --cursor-color: black;
+  --cursor-color: rgb(145, 141, 141);
 }
 
 [data-theme="dark"] {
@@ -27,6 +27,8 @@
     --cursor-color: white;
 }
 
+
+
 a:link,
 a:visited,
 a:hover,
@@ -38,6 +40,7 @@ a:active {
   background-color: var(--secondary-color-white);
   transition: all 0.5s;
   padding-left: 60px;
+  padding-right: 20px;
 }
 
 .Portfolio h1 {
@@ -83,6 +86,7 @@ p {
   font-size: 20px;
   color: var(--heading-color-light);
   font-weight: lighter;
+
 }
 
 .Portfolio h5 {
@@ -106,6 +110,7 @@ p {
 
 .NavBarStyling {
   font-family: var(--font-headings); 
+  padding-top: 15px;
 }
 
 .NavBarStyling a {
@@ -138,7 +143,7 @@ a:active {
 
 .themeToggle i {
   font-size: 30px;
-  padding-top: 15px;
+  padding-top: 30px;
   padding-right: 30px;
   float: right;
   color: var(--primary-colour-black);
