created ripple effect

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Newsreader:wght@200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 
-html,
-body,
-#root {
+html, body, #root, .Portfolio {
   margin: 0;
   padding: 0;
+  width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .HeroContainer {
@@ -100,3 +100,12 @@ body,
   width: 70%;
   padding-top: 50px;
 }
+
+
+.ripple-background {
+  background-image: url('/Users/ilzerieba/Desktop/Coding/my-portfolio/public/IMG_1408.JPG');
+  background-size: cover;
+  background-position: center;
+}
+
+
