--- a/src/RippleImage.css
+++ b/src/RippleImage.css
@@ -1,25 +1,33 @@
+
+
+:root {
+  --main-color: white; /* Default color (white) */
+}
+
+
+
 .heading {
   position: absolute;
-  top: 270px;  /* Position from top of the screen */
-  left: 50%;  /* Center the heading horizontally */
-  transform: translateX(-50%);  /* Offset the center alignment */
-  font-family: "Newsreader", serif;  /* Set the font-family */
-  font-size: 116px;  /* Font size for the heading */
-color:white;  /* Set the text color */
-  text-align: center;  /* Center the text */
-  line-height: 75px;  /* Line height */
-  z-index: 1;  /* Ensure it stays on top of the image */
-  white-space: nowrap;  /* Prevent the text from wrapping to multiple lines */
+  top: 270px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: "Newsreader", serif;
+  font-size: 116px;
+  color: var(--main-color);
+  text-align: center;
+  line-height: 75px;
+  z-index: 1;
+  white-space: nowrap;
 }
 
 .subHeading {
-     position: absolute;
-  top: 360px; /* Adjust as needed — this places it right below the heading */
+  position: absolute;
+  top: 360px;
   left: 50%;
   transform: translateX(-50%);
   font-family: "Newsreader", serif;
   font-size: 32px;
-  color:white;
+  color: var(--main-color);
   text-align: center;
   line-height: 75px;
   z-index: 1;
@@ -32,21 +40,21 @@ color:white;  /* Set the text color */
   right: 80px;
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
-  color:white;
+  color: var(--main-color);
   text-align: left;
-  max-width: 500px; /* Increased width */
+  max-width: 500px;
   line-height: 1.6;
   z-index: 1;
 }
 
 .mainButton {
-  margin-top: 20px; /* space above the button */
+  margin-top: 20px;
   display: inline-block;
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
-  font-weight: 100; /* makes it bolder */
-color:white;
-  text-decoration: underline; /* remove underline */
+  font-weight: 100;
+  color: var(--main-color);
+  text-decoration: underline;
   background: none;
   border: none;
   cursor: pointer;
