--- a/src/Contact.css
+++ b/src/Contact.css
@@ -95,6 +95,11 @@ p {
     background-color: rgba(255, 255, 255, 0.65);
   }
 
+  .leftColumn {
+  padding-left: 20px;
+}
+
+
   .contactTitle {
     font-size: 80px;
     margin-bottom: 15px;
